Bug 252539 - dophin no embeded player in data panel for mp4 video
Summary: dophin no embeded player in data panel for mp4 video
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: information (other bugs)
Version First Reported In: 2.1
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Frank Reininghaus
URL:
Keywords:
: 206312 309607 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-09-27 14:31 UTC by Philippe ROUBACH
Modified: 2012-11-06 00:24 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.1
Sentry Crash Report:


Attachments
mov.png (547.91 KB, image/png)
2012-07-16 08:06 UTC, Philippe ROUBACH
Details
mp4.png (436.89 KB, image/png)
2012-07-16 08:07 UTC, Philippe ROUBACH
Details
mov_1.png (517.34 KB, image/png)
2012-07-16 08:09 UTC, Philippe ROUBACH
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe ROUBACH 2010-09-27 14:31:51 UTC
Version:           unspecified (using KDE 4.5.1) 
OS:                Linux

open dolphin
then
selct a mp4 video
then there is no embeded player in the data panel to play the video

no pb for a *.mov for example
dragon player is embeded and you can play the video


Reproducible: Always




OS: Linux (i686) release 2.6.33.7-desktop-69mib
Compiler: gcc

Mandriva 2010.1 32 bit
kde 4.5.1
dolphin 1.5
Comment 1 Philippe ROUBACH 2010-09-27 14:33:08 UTC
addendum :

in the contextual menu there is an option to play the video with dragon player
Comment 2 Philippe ROUBACH 2010-09-27 14:34:41 UTC
addendum :

in the data panel there is a thumbnail of the video
Comment 3 Harald Sitter 2010-11-28 23:21:09 UTC
Phonon is not used for thumbnailing (which is bug of its own). Moving to kdemultimedia since supposedly ffmpegthumbs or mplayerthumbs is responsible.
Comment 4 Philippe ROUBACH 2012-07-16 08:05:56 UTC
(In reply to comment #3)
> Phonon is not used for thumbnailing (which is bug of its own). Moving to
> kdemultimedia since supposedly ffmpegthumbs or mplayerthumbs is responsible.

there is a misunderstanding.
it is not a thumbnail pb there is a thumbnail for mp4 movie

if you select a .mov then in the data panel (the right one) under the the thumbnail there is a player to view the movie see the attachment mov.png
if you select a .mp4 then in the data panel (the right one) under the the thumbnail there is no player to view the movie see the attachment mp4.png
Comment 5 Philippe ROUBACH 2012-07-16 08:06:47 UTC
Created attachment 72551 [details]
mov.png
Comment 6 Philippe ROUBACH 2012-07-16 08:07:15 UTC
Created attachment 72552 [details]
mp4.png
Comment 7 Philippe ROUBACH 2012-07-16 08:09:29 UTC
Created attachment 72553 [details]
mov_1.png
Comment 8 Philippe ROUBACH 2012-07-16 08:10:48 UTC
mov.png is a bad capture.ignore it

use mov_1.png instead

sorry
Comment 9 Harald Sitter 2012-07-17 08:25:51 UTC
:O
Comment 10 Harald Sitter 2012-07-17 08:29:33 UTC
        const bool usePhonon = Phonon::BackendCapabilities::isMimeTypeAvailable(mimeType) &&
                               (mimeType != "image/png");  // TODO: workaround, as Phonon
                                                           // thinks it supports PNG images

Dolphin issue
Comment 11 Harald Sitter 2012-07-17 08:33:04 UTC
Please note my comments in bug 291438 and bug 303253#c13

The reason this "workaround" is needed is because Phonon *actually* supports PNG (i.e. if you were to load a  PNG in either VLC or GStreamer you would actually get the PNG displayed). As I mentioned numerous times just about everywhere the mimetype API is just silly and should not be used.

If you simply offer the playback for both audio/* and video/* you will get by a magnitude better results as both support Phonon backends basically support all the possible formats that there are.
Comment 12 Frank Reininghaus 2012-08-07 15:58:02 UTC
Thanks for the explanation, Harald! If I understand you correctly, the best approach would be to replace the lines you quoted above with

const bool usePhonon = mimeType.startsWith("audio/") || mimeType.startsWith("video/")?
Comment 13 Harald Sitter 2012-08-07 16:05:32 UTC
Yep
Comment 14 Martin Sandsmark 2012-08-09 01:32:20 UTC
fixed in 2fb4419de053c43a0a70ffb21920db687fa87b6e
Comment 15 Jekyll Wu 2012-08-09 03:00:50 UTC
Git commit d1808d56ec856162dd285ca9e3f8f067b8f474f3 by Jekyll Wu, on behalf of Martin Sandsmark.
Committed on 09/08/2012 at 03:27.
Pushed by jekyllwu into branch 'KDE/4.9'.

Use a saner check for multimedia files in infopanel.

Don't rely on the reported supported mimetypes from Phonon,
Phonon supports more than just video and audio, but if it is
video or audio there's a very good chance Phonon supports it.

(If the mime type isn't in the list returned by Phonon there's
still a good chance it supports it, because mime types are stupid.)
FIXED-IN: 4.9.1

(cherry picked from commit 2fb4419de053c43a0a70ffb21920db687fa87b6e)

M  +1    -3    dolphin/src/panels/information/informationpanelcontent.cpp

http://commits.kde.org/kde-baseapps/d1808d56ec856162dd285ca9e3f8f067b8f474f3
Comment 16 Frank Reininghaus 2012-08-09 09:41:25 UTC
Thanks to everyone who helped to fix this bug!
Comment 17 Jekyll Wu 2012-08-15 11:11:53 UTC
*** Bug 206312 has been marked as a duplicate of this bug. ***
Comment 18 Jekyll Wu 2012-11-06 00:24:05 UTC
*** Bug 309607 has been marked as a duplicate of this bug. ***