Use a saner check for multimedia files in infopanel.

Don't rely on the reported supported mimetypes from Phonon,
Phonon supports more than just video and audio, but if it is
video or audio there's a very good chance Phonon supports it.

(If the mime type isn't in the list returned by Phonon there's
still a good chance it supports it, because mime types are stupid.)

BUG: 252539